[package]
name = "kittymux"
version = "0.1.0"
edition = "2021"
authors = ["Guy Sherman"]
description = """
A terminal navigator for the kitty terminal
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert = "0.7.4"
json = "0.12.4"
mockall = "0.11.3"

