[package]
name = "kittymux"
version = "0.1.0"
edition = "2021"
authors = ["Guy Sherman"]
description = """
A terminal navigator for the kitty terminal
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert = "0.7.4"
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.25.0"
derive_more = { version = "0.99.17", features = ["display"] }
json = "0.12.4"
mockall = "0.11.3"
serde ={ version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tui = "0.19.0"
unicode-width = "0.1.10"

